# ticketing

./: .gitignore  README.md  manage.py  requirements.txt
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
ticket_config/: asgi.py  settings.py  urls.py  wsgi.py
ticketing/: admin.py  docs.py  models.py  params.py  permissions.py  serializers.py  urls.py  views.py
ticketing/migrations/: 0001_initial.py
ticketing/tests/: test_basic.py  test_url.py  test_view.py
ticketing_poetry/: pyproject.toml
